resolved picture-distortion in sidenav and chat-header

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -43,6 +43,8 @@
 
   img {
     height: 24px;
+    width: 24px;
+    object-fit: cover;
     border-radius: 6px;
     margin-right: 6px;
   }
