--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -28,6 +28,7 @@ ul {
     mat-icon {
       height: 24px;
       width: 24px;
+      object-fit: cover;
       border-radius: 6px;
       margin-right: 6px !important;
 
